@@ -1,14 +1,0 @@
-abstract:     VMware's Lab Manager public and private API
-installdirs:  site
-license:      perl
-name:         VMware-API-LabManager
-version:      VERSIONTAG
-version_from: lib/VMware/API/LabManager.pm
-
-requires:
-  Data::Dumper: 0
-  SOAP::Lite: 0.71
-  Net::SSL: 0
-
-distribution_type: module
-generated_by: ExtUtils::MakeMaker version 6.17
